Additional build args for graal